website/websites/demo2/code/mandelbrot.1.clang.log

Wed, 23 Mar 2011 20:41:24 GMT

MAKE:
/usr/bin/clang -pipe -Wall -O3 -fomit-frame-pointer -march=native -D_ISOC9X_SOURCE -mfpmath=sse -msse2 -lm -lpthread mandelbrot.c -o mandelbrot.clang_run
mandelbrot.c:62:22: error: use of unknown builtin '__builtin_ia32_cmplepd'
                v2df delta = (v2df)__builtin_ia32_cmplepd( (Trv + Tiv), four );
                                   ^
mandelbrot.c:62:16: error: invalid conversion between vector type 'v2df' and integer type 'int' of different size
                v2df delta = (v2df)__builtin_ia32_cmplepd( (Trv + Tiv), four );
                             ^~~~~~
2 errors generated.
make: [mandelbrot.clang_run] Error 1 (ignored)
rm mandelbrot.c
0.04s to complete and log all make actions

COMMAND LINE:
./mandelbrot.clang_run 1000

MAKE ERROR 

